Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/instanceOfLitteral.deca
// Description:
//    Utilisation de instanceof sur un littéral
//
// Resultat: Ligne 12
//    ContextualError : Unsupported type for this operation : Cannot use instanceof on a litteral
//
// Historique:
//    Créé le 24/01/2018

{
        int a;
	if (a instanceof int){
	}
}
		